<resources>
    <string name="app_name">EcommerceApps</string>
    <string name="login_cepat_dengan">Login Cepat Dengan</string>
    <string name="login_melalui_sms">Login Melalui Google</string>
    <string name="login_melalui_facebook">Login Melalui Facebook</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_telepon_username">Email/Telepon/Username</string>
</resources>
